<resources>
    <string name="inter_ad_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_name">Eng and Shop</string>

    <string name="Settings_butNav">Settings</string>
    <string name="Note_butNav">Note</string>
    <string name="Shop_list_butNav">Shopping list</string>
    <string name="NewItem_butNav">Create</string>
    <string name="hint_for_noteEdit">Enter title</string>
    <string name="description_hint">Enter description</string>
    <string name="new_shopping_list_text">New list name: </string>
    <string name="hint_for_new_list">Enter name… </string>
    <string name="create_list_but">Create list</string>
    <string name="edit_list_but">Edit list</string>
    <string name="delete_item">Do you want to delete this item?</string>
    <string name="delete_alert">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="hint_name_list_item">New name…</string>
    <string name="hint_info_list_item">New info…</string>
    <string name="empty">Empty</string>
    <string name="update_shop_item">Update list item</string>
    <string name="update_library_item">Update library item</string>

    <string name="theme_settings">Theme settings</string>
    <string name="general">General</string>
    <string name="note_text_settings">Note text settings</string>
    <string name="title_text_settings">Title text size</string>
    <string name="content_text_settings">Content text size</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_text_size">Choose text size</string>
    <string name="choose_theme">Choose theme</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_adds">Do you want to remove adds?</string>
    <string name="remove_adds_summary">Remove all ads from this app</string>


    <string name="new_note">New note</string>
    <string name="notes">Notes</string>
    <string name="shopping_lists">Shopping lists</string>
    <string name="list_items">To-Buy list</string>
    <string name="settings">Settings</string>

</resources>