<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/settings"
      android:title="@string/Settings_butNav"
       android:icon="@drawable/ic_settings"
       app:showAsAction="ifRoom"
    />
    <item android:id="@+id/notes"
        android:title="@string/Note_butNav"
        android:icon="@drawable/ic_note"

        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/shopList"
        android:title="@string/Shop_list_butNav"
        android:icon="@drawable/ic_list"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/newItem"
        android:title="@string/NewItem_butNav"
        android:icon="@drawable/ic_add_item"
        app:showAsAction="ifRoom"
        />

</menu>